# OOP

1r/: vec.py
2r/: a.out  font.txt  hello.out  logger.cpp  small_font.txt
3eng/: CMakeLists.txt  a.out  filters.hpp  handlers.hpp  i_log_filter.hpp  i_log_handler.hpp  logfilter.cpp  logger.hpp  main.cpp
3r/: logger.cpp  logger.hpp  loghandler.cpp  main.cpp
4r/: a.out  i_notify_data_changed.hpp  i_notify_data_changing.hpp  i_property_changed_listener.hpp  i_property_changing_listener.hpp  main.cpp  record_item.cpp  record_item.hpp  simple_notify_data_changed.cpp  simple_notify_data_changing.cpp  simple_property_changed_listener.hpp  simple_property_changing_listener.cpp  simple_property_changing_listener.hpp
5/: .auth  CMakeLists.txt  UserRepository.cpp  auth_service.cppm  data_repository.cppm  i_auth_service.cpp  i_data_repository.cppm  i_user_repository.cppm  main.cpp  user.cppm  usr.txt
5alt/: CMakeLists.txt  json_data_rep.cppm  json_usr_rep.cppm  main.cpp  users.json
5alt/.cache/clangd/index/: auth_service.cppm.B61ECA45B0940162.idx  i_auth_service.cppm.4A29822443F9D3F9.idx  i_data_rep.cppm.457A2AF28CB45EFB.idx  i_usr_rep.cppm.D09FF38E463B6854.idx  json_data_rep.cppm.A6D6EEC9128A1036.idx  json_usr_rep.cppm.219DFC1CA8413069.idx  main.cpp.81B69750EAA28711.idx  user.cppm.CEED0300624B7085.idx
5r/: auth_service.cppm  i_auth_service.cppm  i_data_rep.cppm  i_usr_rep.cppm  main.cpp  user.cppm  users.json
6r/: CMakeLists.txt  commands.cppm  keyboard.cppm  keyboard_state.json  main.cpp  output.txt  save.cppm
7WithArgs/: CMakeLists.txt  a.out  classes1.cppm  (+3 more)
(+37 files in other folders)
